# bgem3

./: .gitignore  AGENTS.md  README.md  bgem3_embed.py  bgem3_mcp.py  bgem3_rerank.py  fix_service.sh  mcp_server.py  preflight.py  pyproject.toml  rag_server.py  remove_old_venvs.sh  reranker_server.py  restart.sh  start.py  test_service.py
.launch/: com.bgem3.embed.plist  com.bgem3.mcp.plist  com.bgem3.rerank.plist
scripts/: get_zt_ip.sh  start_mcp.sh  start_server.sh  start_server_direct.sh  start_server_fixed.sh
