[project]
name = "bgem3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.135.3",
    "psutil>=7.2.2",
    "ruff>=0.15.10",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
exclude = ["*.sh"]
